--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,7 +12,7 @@
   --text-2xl: clamp(2.44rem, 2.02vi + 1.94rem, 3.55rem);
   --text-3xl: clamp(3.05rem, 3.06vi + 2.29rem, 4.73rem);
   --text-4xl: clamp(3.5rem, 4.54vi + 2.68rem, 6.31rem);
-  --text-5xl: clamp(3rem, 5vi + .25rem, 8.6rem);
+  --text-5xl: clamp(3.75rem, 5vi + .25rem, 8.6rem);
   --spacing-site: 1.5rem;
   --spacing-navbar: 5.499375rem;
   --spacing-viewport: calc(100svh - var(--spacing-navbar) - var(--spacing-site));
@@ -22,8 +22,8 @@
   --color-blue: #0056a4;
   --color-green: #36e05a;
   --color-red: #db411d;
+  --color-yellow: #FCB900;
   --color-lime-*: initial;
-  --color-yellow-*: initial;
   --color-orange-*: initial;
   --color-amber-*: initial;
   --color-emerald-*: initial;
@@ -49,11 +49,11 @@
   font-display: swap;
 }
 
-
-
 html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  scroll-behavior: smooth;
+  scroll-padding-top: var(--spacing-navbar);
 }
 
 h1, h2, h3, h4, h5 {
