--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,13 +16,22 @@
   --spacing-site: 1.5rem;
   --spacing-navbar: 5.499375rem;
   --spacing-viewport: calc(100svh - var(--spacing-navbar) - var(--spacing-site));
-  --color-black: #2c3034;
+  --color-black: #1b2022;
   --color-white: #fff;
   --color-orange: #ff6720;
   --color-blue: #0056a4;
   --color-green: #36e05a;
   --color-red: #db411d;
   --color-yellow: #FCB900;
+  --color-red-shadow: #412427;
+  --color-green-shadow: #2a3425;
+  --color-yellow-shadow: #433f28;
+  --color-blue-shadow: #1d333c;
+  --shadow-red: .75rem .75rem 0 var(--color-red-shadow);
+  --shadow-blue: .75rem .75rem 0 var(--color-blue-shadow);
+  --shadow-yellow: .75rem .75rem 0 var(--color-yellow-shadow);
+  --shadow-green: .75rem .75rem 0 var(--color-green-shadow);
+  --shadow-color: .75rem .75rem 0 var(--color);
   --color-lime-*: initial;
   --color-orange-*: initial;
   --color-amber-*: initial;
